--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,36 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: "Learn how to set up casey in your server or enhance your everyday use with commands & more."
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+## What is Casey?
 
-## Setting up
+<Note>
+Casey is a next-generation Discord premium bot designed to provide flawless automation, elite moderation tools, and a seamless experience for your community. With a focus on reliability and modern features, casey helps you manage your server efficiently and keeps your members engaged.
+</Note>
 
-The first step to world-class documentation is setting up your editing environments.
+## How can I use Casey?
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+<Warning>
+Casey is currently in active development and not yet available for public use. Stay tuned for updates on our Discord or main page to be among the first to try it out when it launches!
+</Warning>
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+## Feature Overview
 
 <CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
+  <Card title="Advanced Moderation" icon="shield-halved">
+    Protect your server with powerful moderation tools designed to keep your community safe and welcoming.
   </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
+  
+  <Card title="Automation" icon="robot">
+    Automate routine tasks and create custom workflows to save time and enhance user experience.
   </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
+  
+  <Card title="Community Engagement" icon="users">
+    Boost engagement with interactive features, custom welcome messages, and role management.
   </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+  
+  <Card title="Customization" icon="palette">
+    Tailor Casey to fit your server's unique style and needs with extensive customization options.
   </Card>
 </CardGroup>
