--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,10 @@
 ---
 title: Introduction
 description: "Learn how to set up casey in your server or enhance your everyday use with commands & more."
+image: "favicon.ico"
+og:image: "favicon.ico"
+twitter:card: "summary"
+twitter:image: "favicon.ico"
 ---
 
 ## What is Casey?
